analyzer fix