@@ -1,4 +1,4 @@
 PATH_TO_BUILDGRADLE=$1
 
 chmod +x $PATH_TO_BUILDGRADLE/gradlew
-$PATH_TO_BUILDGRADLE/gradlew -b $PATH_TO_BUILDGRADLE/build.gradle -Dorg.gradle.jvmargs="-Xmx128m -XX:MaxPermSize=64m" test
+$PATH_TO_BUILDGRADLE/gradlew -b $PATH_TO_BUILDGRADLE/build.gradle -Dorg.gradle.jvmargs="-Xms32m -Xmx100m -Xss32m -XX:ReservedCodeCacheSize=64m" test
